# EntityForge

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-linux.yml  ci.yml  release-windows.yml
Example/: CMakeLists.txt  README.md  build.sh
Example/assets/objectives/: objectives.json
Example/src/: AudioManager.cpp  AudioManager.h  Barrel.cpp  Barrel.h  BarrelSpawner.cpp  BarrelSpawner.h  Boat.cpp  Boat.h  CameraController.cpp  CameraController.h  MainCamera.cpp  MainCamera.h  main.cpp
Example/src/audio/: AudioManager.cpp  AudioManager.h  AudioManagerBehaviour.cpp  AudioManagerBehaviour.h
Example/src/barrel/: Barrel.cpp  BarrelBehaviour.cpp  BarrelBehaviour.h  BarrelSpawner.cpp  BarrelSpawner.h  BarrelSpawnerBehaviour.cpp  BarrelSpawnerBehaviour.h
Example/src/boat/: Boat.cpp  Boat.h  BoatBehaviour.cpp  BoatBehaviour.h
Example/src/camera/: CameraController.cpp  CameraController.h  CameraControllerBehaviour.cpp  CameraControllerBehaviour.h
Example/src/ui/: ExampleHud.cpp  ExampleHud.h
build_tools/: build.sh  build_linux.sh  build_windows.sh  format.sh  format_and_analysis.sh  push_ghcr_image.sh  static_analysis.sh
cmake/: GameEngineConfig.cmake.in
include/: EntityManager.h  EventBus.h  GameEngine.h  Registry.h  World.h
include/components/: CAudioSettings.h  CCamera.h  CInputController.h  CNativeScript.h  CObjectives.h  Components.h  ISerializableScript.h
include/objectives/: ObjectiveDefinition.h  ObjectiveEvents.h  ObjectiveRegistry.h
include/physics/: TriggerEvents.h
include/systems/: ISystem.h  S2DPhysics.h  SAudio.h  SCamera.h  SInput.h  SObjectives.h  SParticle.h  SRenderer.h  SScript.h  SystemLocator.h
include/systems/serialization/: ComponentSerializationRegistry.h  JsonComponentSerializers.h  SaveGame.h  ScriptFieldArchive.h  ScriptTypeRegistry.h
include/ui/: UIButton.h  UIContext.h  UIDrawList.h  UIElement.h  UIHorizontalLayout.h  UILabel.h  UIPanel.h  UIRect.h  UIRenderer.h  UIStyle.h  UITheme.h  UITransform.h  UIVerticalLayout.h
include/utility/: CameraProjection.h  CameraView.h  ExecutablePaths.h  FileUtilities.h  Logger.h  SFMLResourceLoader.h  StackTrace.h
src/: GameEngine.cpp
src/objectives/: ObjectiveRegistry.cpp
src/systems/: S2DPhysics.cpp  SAudio.cpp  SCamera.cpp  SInput.cpp  SObjectives.cpp  SParticle.cpp  SRenderer.cpp  SScript.cpp  SystemLocator.cpp
src/systems/serialization/: JsonComponentSerializers.cpp  SaveGame.cpp  ScriptTypeRegistry.cpp
src/ui/: UIRenderer.cpp  UITheme.cpp
src/utility/: CameraProjection.cpp  CameraView.cpp  ExecutablePaths.cpp  FileUtilities.cpp  Logger.cpp  SFMLResourceLoader.cpp  StackTrace.cpp
tests/: CInputControllerTest.cpp  CMakeLists.txt  CameraProjectionTest.cpp  CameraSystemTest.cpp  CameraViewTest.cpp  ComponentStoreDefensiveTest.cpp  CoverageCriticalFunctionsTest.cpp  EventBusTest.cpp  LoggerTest.cpp  NativeScriptEventBusSubscriptionTest.cpp  ObjectiveRegistryTest.cpp  ObjectivesPhase4Test.cpp  PhysicsTriggerEventsTest.cpp  SFMLResourceLoaderTest.cpp  SInputEventBusBridgeTest.cpp  SParticleTest.cpp  SScriptTest.cpp  SaveGameJsonMoreComponentsTest.cpp  SaveGameJsonTest.cpp  SaveGameNativeScriptTest.cpp  SaveGameObjectivesTest.cpp  SaveGamePhase1Test.cpp  SaveGameTest.cpp  SystemsRegressionTest.cpp  UITest.cpp
